# dsdn-Rcore

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Node and cordinator.txt  README.md  celestia_debug.rs  da_debug.rs  dsdn.toml  project.txt  row_count.py  sementara.rxt  testcli.txt  wallet_debug.rs
crates/agent/: Cargo.toml  README.md
crates/agent/src/: cli.rs  cmd_chunk.rs  cmd_da.rs  cmd_economic.rs  cmd_gating.rs  cmd_health.rs  cmd_identity.rs  cmd_rebuild.rs  cmd_verify.rs  crypto.rs  da_types.rs  download_verify.rs  economic_metrics.rs  main.rs  node_handlers.rs  retry.rs  sss.rs  tests.rs  upload_tracking.rs
crates/agent/tests/: cli_test.rs  economic_flow_tests.rs
crates/chain/: Cargo.toml  README.md
crates/chain/src/: anti_self_dealing_check.rs  block.rs  block.rss  celestia.rs  challenge_manager.rs  claim_reward_handler.rs  cli.rs  crypto.rs  db.rs  e2e_tests.rs  economic.rs  encryption.rs  epoch.rs  fraud_proof_handler.rs  lib.rs  mempool.rs  mempool.rss  miner.rs  mnemonic.rs  proposer.rs  qv.rs  receipt.rs  receipt_v1_verify.rs  reward_executor.rs  rpc.rs  slashing.rs  slashing.rss  sync.rs  sync.rss  tokenomics.rs  tx.rs  tx.rss  types.rs  wallet.rs  wallet.rss
crates/chain/src/coordinator/: accountability.rs  disputes.rs  dkg.rs  epoch.rs  mod.rs  tests.rs  types.rs
crates/chain/src/crypto/: dilithium.rs  dilithium_backend.rs  ecdsa.rs  ed25519_backend.rs  schemes.rs
crates/chain/src/e2e_tests/: test_claim_reward.rs  test_fee_allocation.rs
crates/chain/src/gating/: mod.rs  persistence.rs  query.rs  registry.rs  service_node.rs  slashing.rs  tests.rs
crates/chain/src/p2p/: config.rs  handshake.rs  identity.rs  manager.rs  mod.rs  pex.rs  scoring.rs  store.rs  types.rs
crates/chain/src/state/: internal_account.rs  internal_account.rss  internal_economic.rs  internal_fees.rs  internal_gas.rs  internal_governance.rs  internal_misc.rs  internal_model.rs  internal_node_cost.rs  internal_payload.rs  internal_qv_cache.rs  internal_receipt.rs  internal_rewards.rs  internal_slash_adapter.rs  internal_snapshot.rs  internal_staking.rs  mod.rs  (+7 more)
crates/chain/tests/: challenge_tests.rs  claim_reward_tests.rs  integration_tests.rs  post_delegation.rs  reward_distribution_tests.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: anti_self_dealing.rs  audit_hook.rs  audit_log_error.rs  audit_log_tests.rs  audit_writer.rs  celestia_da.rs  challenge_state.rs  cid.rs  claim_validation.rs  config.rs  consistent_hash.rs  crypto.rs  da.rs  da.rss  da_health_monitor.rs  da_mirror.rs  da_router.rs  default_audit_writer.rs  economic_constants.rs  execution_commitment.rs  lib.rs  mock_audit.rs  mock_da.rs  receipt_dedup.rs  receipt_hash.rs  receipt_v1.rs  receipt_v1_convert.rs  worm_log.rs
crates/common/tests/: celestia_mainnet_integration.rs  da_integration.rs
crates/coordinator/: Cargo.toml  README.md
crates/coordinator/src/: audit_logging.rs  cli.rs  da_consumer.rs  event_publisher.rs  handlers.rs  lib.rs  main.rs  receipt_publisher.rs  reconciliation.rs  scheduler.rs  state_machine.rs  state_rebuild.rs
crates/coordinator/tests/: da_integration.rs  da_publish_tests.rs  execution_tests.rs  receipt_signing_tests.rs
crates/ingress/: Cargo.toml  README.md
crates/ingress/src/: alerting.rs  app_state.rs  coord_client.rs  da_router.rs  economic_endpoint_tests.rs  economic_handlers.rs  economic_validation.rs  fallback.rs  fallback_health.rs  handlers.rs  helpers.rs  main.rs  metrics.rs  rate_limit.rs  receipt_event_logger.rs  routing.rs  stubs.rs  tests.rs  types.rs
crates/ingress/tests/: rounting_test.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: bootstrap.rs  chain_submitter.rs  cli.rs  coordinator_client.rs  da_follower.rs  delete_handler.rs  event_processor.rs  gating_tests.rs  handlers.rs  health.rs  identity_manager.rs  identity_persistence.rs  join_request.rs  lib.rs  main.rs  metrics.rs  multi_da_source.rs  placement_verifier.rs  quarantine_handler.rs  receipt_handler.rs  rejoin_manager.rs  replicator.rs  reward_orchestrator.rs  runtime_service.rs  state.rs  state_sync.rs  status_notification.rs  status_tracker.rs  tls_manager.rs  transport.rs  usage_proof_builder.rs  worker.rs  workload_executor.rs
crates/node/tests/: da_integration.rs  integration_storage_node.rs  integration_tests_chain_node.rs  integration_tests_cross_crate.rs  reward_pipeline_tests.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/proto/: api.proto
crates/proto/src/: audit_event.rs  build.rs  chunker.rs  consistency_report.rs  da_event.rs  da_event.rss  da_health.rs  encoding.rs  fallback_event.rs  lib.rs  pending_blob.rs  proto_audit_event_reexport.rs  reconcile_report.rs
crates/proto/tests/: claim_reward_tests.rs  execution_tests.rs  fraud_proof_tests.rs  integration.rs  receipt_v1_tests.rs
crates/runtime_vm/: Cargo.toml
crates/runtime_vm/src/: committed_execution.rs  execution_result.rs  firecracker_vm.rs  lib.rs  merkle.rs  mock_vm.rs  state_capture.rs
crates/runtime_vm/tests/: commitment_tests.rs
crates/runtime_wasm/: Cargo.toml
crates/runtime_wasm/src/: committed_execution.rs  execution_result.rs  lib.rs  merkle.rs  state_capture.rs  trace_recorder.rs
crates/runtime_wasm/tests/: determinism_tests.rs
crates/storage/: Cargo.toml  README.md  build.rs
crates/storage/src/: chunker.rs  cli.rs  da_storage.rs  events.rs  gc.rs  lib.rs  localfs.rs  main.rs  metrics.rs  recovery.rs  rpc.rs  storage_proof.rs  store.rs  worm_file.rs
crates/storage/tests/: da_integration.rs
crates/tss/: Cargo.toml
crates/tss/src/: error.rs  frost_adapter.rs  keyshare.rs  lib.rs  primitives.rs  types.rs  verify.rs
crates/tss/tests/: frost_integration_tests.rs  frost_serialization_sizes.rs
crates/validator/: Cargo.toml  readme.md
crates/validator/src/: chain_integration.rs  coordinator_selection.rs  finalization_gate.rs  lib.rs  lib.rss  main.rs  metrics_tracking.rs  quorum_da.rs  reward_distributor.rs  reward_query.rs  reward_tracker.rs  signature_collector.rs
crates/validator/tests/: reward_system_tests.rs
(+114 files in other folders)
