[workspace]
members = [
    "crates/agent",
    "crates/chain",
    "crates/common",
    "crates/coordinator",
    "crates/ingress",
    "crates/node",
    "crates/proto",
    "crates/runtime_cli",
    "crates/runtime_vm",
    "crates/runtime_wasm",
    "crates/storage",
    "crates/validator"
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/dsdn"
description = "DSDN — Decentralized Storage & Data Network (infra-grade, deterministic, safety-first)"

[workspace.dependencies]
anyhow = { version = "=1.0.86", default-features = false }
serde = { version = "~1.0.225", features = ["derive"] }
serde_json = "=1.0.120"
bincode = "=1.3.3"
sha3 = "=0.10.8"
hex = "=0.4.3"
rand_core = "=0.6.4"
parking_lot = "=0.12.3"
lmdb = "=0.9.2"
chrono = { version = "=0.4.38", features = ["serde"] }
tokio = { version = "=1.37.0", features = ["full"] }
clap = { version = "=4.5.8", features = ["derive"] }
ed25519-dalek = { version = "=2.1.1", default-features = false }

# ==========================
# BUILD PROFILES (LEGAL)
# ==========================

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
debug-assertions = true
incremental = false
codegen-units = 1

[profile.test]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true
incremental = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = true
overflow-checks = true
incremental = false
