[package]
name = "dsdn-common"
version = "0.1.0"
edition = "2021"
authors = ["INEVA Team"]

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
thiserror = "2.0.17"
tempfile = "3.10"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
base64 = "0.21"
sha3 = "0.10"
tracing = "0.1"
serde_json = "1.0"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }