[package]
name = "dsdn-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
dsdn-common = { path = "../common" }
axum = "0.7"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
parking_lot = "0.12"
uuid = { version = "1.4", features = ["v4"] }
