[package]
name = "dsdn-coordinator"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dsdn-common = { path = "../common" }
dsdn-proto = { path = "../proto" }
dsdn-tss = { path = "../tss" }
dsdn-validator = { path = "../validator" }
axum = "0.7"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
parking_lot = "0.12"
uuid = { version = "1.4", features = ["v4"] }
futures = "0.3"
sha3 = "0.10"
bincode = { version = "2.0.1", features = ["serde"] }
async-trait = "0.1"
hex = "0.4"
dotenvy = "0.15"
ed25519-dalek = "2.2.0"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "dsdn-coordinator"
path = "src/main.rs"