[package]
name = "dsdn-ingress"
version = "0.1.0"
edition = "2021"
authors = ["INEVA team"]

[dependencies]
axum = "0.7"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
bytes = "1.4"
anyhow = "1.0"
dsdn-storage = { path = "../storage" }
