[package]
name = "dsdn-node"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dsdn-common = { path = "../common" }
dsdn-storage = { path = "../storage" }
dsdn-coordinator = { path = "../coordinator" }
dsdn-runtime-wasm = { path = "../runtime_wasm" }

tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
parking_lot = "0.12"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
futures = "0.3"
thiserror = "1.0"

wat = "1.0"
tonic = { version = "0.9", features = ["transport"] }

[[bin]]
name = "dsdn-node"
path = "src/main.rs"

[[bin]]
name = "run_wasm_client"
path = "src/bin/run_wasm_client.rs"