[package]
name = "dsdn-proto"
version = "0.1.0"
edition = "2021"
authors = ["INEVA Team"]
build = "build.rs"

[dependencies]
dsdn-common = { path = "../common" }
anyhow = "1.0"
bytes = "1.5"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha3 = "0.10"
serde-big-array = "0.5"
proptest = "1.4"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
tempfile = "3.6"
