[package]
name = "dsdn-runtime-wasm"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dsdn-common = { path = "../common" }
sha3 = "0.10.8"
wasmtime = "15"
wasmtime-wasi = "15"
wat = "1.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
