[package]
name = "dsdn-storage"
version = "0.1.0"
edition = "2021"
authors = ["INEVA Team"]
build = "build.rs"

[dependencies]
dsdn-common = { path = "../common" }
anyhow = "1.0"
bytes = "1.5"

# --- tambahkan dependensi runtime untuk gRPC dan async ---
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"

[build-dependencies]
# --- build dependency, digunakan di build.rs untuk generate kode gRPC ---
tonic-build = "0.9"

[dev-dependencies]
tempfile = "3.6"
