[package]
name = "dsdn-storage"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
build = "build.rs"

[dependencies]
dsdn-common = { path = "../common" }
anyhow = "1.0"
bytes = "1.5"
parking_lot = "0.12"
tracing = "0.1"
sha3 = "0.10"
hex = "0.4"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
tempfile = "3.6"

[[bin]]
name = "dsdn-storage"
path = "src/main.rs"