[package]
name = "dsdn-tss"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "DSDN Threshold Signature Scheme - foundational types and cryptographic primitives"

[dependencies]
rand = "0.8"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"