[package]
name = "dsdn-validator"
version = "0.1.0"
edition = "2021"
authors = ["INEVA team"]

[dependencies]
dsdn-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
axum = "0.7"
parking_lot = "0.12"
hex = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ed25519-dalek = "2.2.0" 
rand = "0.8"
rand_core = "0.6"

[dev-dependencies]
wiremock = "0.5"

